<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="273dp">


        <TextView
            android:id="@id/tv_card_all_importo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="352,12€"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/kodchasan_extralight" />

    <TextView
        android:id="@id/tv_card_all_account"
        android:layout_width="wrap_content"
        android:layout_height="14dp"


        android:layout_marginStart="8dp"
        android:textColor="@color/almost_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_all_tipo"
        app:layout_constraintStart_toEndOf="@+id/tv_all_dot"
        app:layout_constraintTop_toTopOf="@id/tv_card_all_tipo" />

    <TextView
        android:id="@id/tv_card_all_saldato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/payed_upto"
        android:textAlignment="center"
        android:textColor="@color/almost_black"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_card_all_tipo" />

    <TextView
            android:id="@id/tv_card_all_saldatoday"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/almost_black"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_all_saldato"
            app:layout_constraintStart_toEndOf="@id/tv_card_all_saldato"
            app:layout_constraintTop_toTopOf="@id/tv_card_all_saldato" />

    <TextView
            android:id="@id/tv_card_all_saldatomonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/almost_black"
            app:layout_constraintBottom_toBottomOf="@id/tv_card_all_saldatoday"
            app:layout_constraintStart_toEndOf="@id/tv_card_all_saldatoday"
            app:layout_constraintTop_toTopOf="@id/tv_card_all_saldatoday" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img_outgoing_description"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_trans_out"
        tools:layout_conversion_absoluteHeight="54dp"
        tools:layout_conversion_absoluteWidth="28dp" />


    <TextView
        android:id="@id/tv_all_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/all_dot"
        app:layout_constraintBottom_toBottomOf="@id/tv_card_all_tipo"
        app:layout_constraintStart_toEndOf="@id/tv_card_all_tipo"
        app:layout_constraintTop_toTopOf="@id/tv_card_all_tipo" />

    <TextView
        android:id="@id/tv_card_all_tipo"
        style="@style/text_style_tipo"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_card_all_beneficiario" />


    <TextView
        android:id="@id/tv_card_all_beneficiario"

        style="@style/text_style_beneficiario"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/hindvadodara_semibold"
        android:textAlignment="center"
        android:textColor="@color/almost_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="25dp"
        tools:layout_conversion_absoluteWidth="1dp" />


    <android.support.constraint.Group
        android:id="@+id/hidden_transaction_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_card_all_tipo, tv_card_all_saldato, tv_card_all_saldatoday, tv_card_all_saldatomonth, tv_card_all_account, tv_all_dot" />

    </android.support.constraint.ConstraintLayout>



