<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="15dp"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@id/cv_mainactivity_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="0dp"
        card_view:cardMaxElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <android.support.constraint.ConstraintLayout
                android:id="@id/constraintlayout_mainactivity_bgtop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >


                <TextView
                    android:id="@id/tv_card_all_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/krub_extra_light"
                    android:text="Cassa di Risparmio Di Volterra"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/img_more_description"
                    android:cropToPadding="false"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/ic_more_vert_black_24dp" />


                <TextView
                    android:id="@id/tv_mainactivity_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/current_balance"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_card_all_account" />

                <TextView
                    android:id="@id/tv_mainactivity_current_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/kodchasan_extralight"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    card_view:layout_constraintBottom_toBottomOf="@id/tv_mainactivity_current"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="@id/tv_mainactivity_current" />


                <TextView
                    android:id="@id/tv_mainactivity_totaltrans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_card_all_account" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="?android:attr/listDivider"
                    card_view:layout_constraintTop_toBottomOf="@id/tv_mainactivity_current" />


            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@id/rv_mainactivity_dates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clipToPadding="true"
                android:paddingBottom="5dp"
                android:visibility="gone"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/divider">

            </android.support.v7.widget.RecyclerView>

            <android.support.constraint.ConstraintLayout
                android:id="@id/constraintlayout_mainactivity_bgbottom"
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <TextView
                    android:id="@id/tv_mainactivity_estimated_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/kodchasan_extralight"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    card_view:layout_constraintBottom_toBottomOf="@id/tv_mainactivity_estimated"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="@id/tv_mainactivity_estimated" />

                <TextView
                    android:id="@id/tv_mainactivity_estimated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/estimated_balance"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="15dp"
        android:layout_height="wrap_content" />

</LinearLayout>
