<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet_mainactivity_insert"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:elevation="3dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardMaxElevation="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_save_transaction"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_save_black_24dp" />

            <TextView
                android:id="@+id/tv_bottomsheet_insert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="20dp"
                android:text="Trascina per filtrare..."
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="italic"
                android:visibility="visible" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fillViewport="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_save_transaction">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/importo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/beneficiario">

                        <EditText
                            android:id="@+id/inputimporto2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/importo"
                            android:inputType="numberDecimal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/endDate"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/recurrence"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/recurrence"
                        app:layout_constraintTop_toTopOf="@+id/recurrence">

                        <EditText
                            android:id="@+id/select_end_date2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:focusable="false"
                            android:hint="seleziona fine"
                            android:inputType="date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@id/btn_mainactivity_bottomsheet_outcome"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:elevation="1dp"
                        android:text="@string/btn_mainactivity_outcome_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/btn_mainactivity_bottomsheet_income"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/recurrence"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:spinnerMode="dropdown"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/selectDate" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/saldato"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="-1dp"
                        app:layout_constraintBottom_toBottomOf="@+id/selectDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/selectDate"
                        app:layout_constraintTop_toTopOf="@+id/selectDate">

                        <EditText
                            android:id="@+id/select_saldato2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="saldato fino a"
                            android:inputType="date" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinner_transaction_types2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:spinnerMode="dropdown"
                        app:layout_constraintEnd_toStartOf="@+id/spinner_accounts2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recurrence" />

                    <Button
                        android:id="@id/btn_mainactivity_bottomsheet_income"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:elevation="1dp"
                        android:text="@string/btn_mainactivity_income_label"
                        app:layout_constraintEnd_toStartOf="@id/btn_mainactivity_bottomsheet_outcome"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/beneficiario"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_mainactivity_bottomsheet_income">

                        <AutoCompleteTextView
                            android:id="@+id/inputBeneficiario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="56dp"
                            android:hint="@string/beneficiario"
                            android:inputType="textAutoComplete"
                            app:layout_constraintBottom_toTopOf="@+id/Inserisci"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/spinner_accounts2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:spinnerMode="dropdown"
                        app:layout_constraintBottom_toBottomOf="@+id/spinner_transaction_types2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/spinner_transaction_types2"
                        app:layout_constraintTop_toTopOf="@+id/spinner_transaction_types2" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/selectDate"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/importo">

                        <EditText
                            android:id="@+id/select_date2"
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:focusable="false"
                            android:hint="seleziona scadenza"
                            android:inputType="date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                    </android.support.design.widget.TextInputLayout>
                </android.support.constraint.ConstraintLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
